# ClipWeb

./: Cargo.toml  README.md  clear.bat  db.sqlite
.sqlx/: query-9e7231517484fd5a41f3b097270638b11f5a46eb86547c1f701b4b110e8fc065.json  query-cf8b3c05e2efc1de2ad16ed51fc0f4e7949960e94933038336c81d81b802f1c2.json
src/: datatypes.rs  main.rs  templates.rs
src/api/: create.rs  datatypes.rs  expiery.rs  get.rs  mod.rs
static/: index.html  style.css
templates/: 404.html  paste.html
