[package]
name = "clipweb"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["json", "macros"] }
axum-server = "0.7.2"
rand = { version = "0.9.1", features = ["alloc"] }
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.46.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
